--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,7 +1,9 @@
 
 .footer {
+  margin-top: 5rem;
   color: #fff;
-  background-color: #343a40;
+  // background-color: #343a40;
+  background-color:  rgb(24, 17, 34);
   text-align: center;
   max-width: 100%;
   overflow-x: hidden;
@@ -13,21 +15,23 @@
     cursor: pointer;
     margin-left: 0.4rem;
   }
-  .hr{
-    border-top: 1px solid white;
-    width: 85vw;
-    margin: 1rem auto;
+  .link-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
-  @media screen and (max-width: 1000px){
-    .hr{
-      width: 100%;
-      margin: 1rem 0;
-    }
-  }
- 
+
+ .footer-link{
+    color: white;
+    font-size: 1.1rem;
+    text-decoration: none;
+    margin-right: 1rem;
+ }
+ .copyRight {
+  font-size: 0.7rem;
+  padding-top: 2rem;
+}
+
 
 }
 
-@media screen and (min-width: 768px) { 
-  
-}
