--- a/src/styles/WelHeader.css
+++ b/src/styles/WelHeader.css
@@ -14,10 +14,13 @@
 }
 
 #nonparallax {
-	/* background-image: url('../assets/images/parallax/keyart-mobile.jpg'); */
+	background-image: url('../assets/Games/mobile-version.png');
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: auto 100%;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .keyart {
@@ -28,10 +31,12 @@
 
 .keyart_layer {
 	background-position: bottom center;
-	/* background-size: auto 1038px;
-	background-repeat: repeat-x; */
-	width: 100%;
-	position: absolute;
+    /* background-size: auto 1038px; */
+    background-repeat: no-repeat;
+    width: 100%;
+    position: absolute;
+	background-size: cover;
+	height: 1038px;
 }
 .keyart_layer.parallax {
 	position: fixed;
